# WorldModels

SpatialMapping/: CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
SpatialMapping/docs/: ARCHITECTURE.md  ROADMAP.md
SpatialMapping/examples/: README.md  basic_usage.py  photo_ingestion.py
SpatialMapping/prototype/: PROTOTYPE_OVERVIEW.md
SpatialMapping/prototype/home_locator/: QUICKSTART.md  README.md  app.py  graph_manager.py  requirements.txt  swift_example.swift  test_api.py  test_with_curl.sh  vision_processor.py
SpatialMapping/src/semantic_memory/: __init__.py
SpatialMapping/src/semantic_memory/core/: __init__.py  entity.py  relationship.py
SpatialMapping/src/semantic_memory/graph/: __init__.py  semantic_graph.py
SpatialMapping/src/semantic_memory/ingestion/: __init__.py  observation.py  photo_processor.py
SpatialMapping/src/semantic_memory/spatial/: __init__.py
SpatialMapping/src/semantic_memory/vision/: __init__.py
SpatialMapping/tests/: __init__.py  test_entity.py  test_graph.py
